@@ -135,6 +135,7 @@
 82. Improve MPRIS interface - fix CanPlay/CanPause status update, and use micro
     seconds for times.
 83. Use EchoNest to retrieve artist information.
+84. Add ability to specify extra options for sshfs.
 
 0.9.2
 -----
